updated pom.xml: added dependency hibernate, scope:runtime and added maven.compiler 17 property. Deleted expose 8080 and workdir from DOckerfile because it was unnecessary